@@ -28,7 +28,6 @@ study:
       criteria:
         - applicability_criteria:
             lims:
-              library_type: "HiSeqX PCR free"
           acceptance_criteria :
             - "( bam_flagstats.target_proper_pair_mapped_reads / bam_flagstats.target_mapped_reads ) > 0.95"
             - "bam_flagstats.target_mapped_bases > 85_000_000_000"
